name: aeson-pointer
version: 0.0.0
synopsis: JSON pointers over Aeson values
description:
    This is an implementation of JSON pointers over Aeson values, per RFC
    6901: <http://tools.ietf.org/html/rfc6901>
homepage: http://github.com/mkscrg/aeson-pointer
license: BSD3
license-file: LICENSE
author: Mike Craig
maintainer: mkscrg@gmail.com
copyright: 2013 Mike Craig
category: Text, Web, JSON
build-type: Simple
extra-source-files:
    README.md
cabal-version: >= 1.9.2

library
  hs-source-dirs: src
  ghc-options: -Wall -O2
  extensions:
      OverloadedStrings
  exposed-modules:
      Data.Aeson.Pointer
  build-depends:
      aeson == 0.6.*
    , base == 4.*
    , text >= 0.11.1.0
    , vector >= 0.7.1

test-suite tests
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  ghc-options: -Wall -O2 -fno-warn-orphans
  extensions:
      OverloadedStrings
  main-is: Test.hs
  build-depends:
      aeson
    , aeson-pointer
    , attoparsec
    , base
    , QuickCheck
    , test-framework
    , test-framework-quickcheck2
    , text
    , unordered-containers
    , vector

source-repository head
  type: git
  location: git://github.com/mkscrg/aeson-pointer.git
